syntax = "proto3";

package service.v1;

import "google/api/annotations.proto";
import "google/protobuf/duration.proto";

option go_package = "tinyid/api/idgen/v1;v1";

// The id generator service definition.
service Idgen {
  // SegmentId 段号模式获取ID
  rpc SegmentID (SegmentRequest) returns (IdReply)  {
    option (google.api.http) = {
      get: "/api/segment/{tag}",
    };
  }

  // SnowflakeId 雪花算法模式获取ID
  rpc SnowflakeID (SnowflakeRequest) returns (IdReply)  {
    option (google.api.http) = {
      get: "/api/snowflake",
    };
  }

  // CurrentTime 获取本节点时间戳
  rpc CurrentTime(CurrentTimeRequest) returns(CurrentTimeReply){
    option (google.api.http) = {
      get: "/api/timestamp",
    };
  }
}

message SegmentRequest {
  string tag = 1;
}

message SnowflakeRequest {
}

message IdReply {
  int64 id = 1;
}

message CurrentTimeRequest {
}

message CurrentTimeReply{
  google.protobuf.Duration time = 1;
}
