syntax = "proto3";
package api.idgen.conf;

option go_package = "tinyid/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Data data = 2;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
    int32 active = 3;
    int32 idle = 4;
    google.protobuf.Duration query_timeout = 5;
    google.protobuf.Duration exec_timeout = 6;
    google.protobuf.Duration idle_timeout = 7;
  }

  message Etcd {
    repeated string endpoints = 1;
    google.protobuf.Duration dial_timeout = 2;
    google.protobuf.Duration TTL = 3;
  }

  Database database = 1;
  Etcd etcd = 2;
}
